[package]
name = "backend_accounting"
version = "0.1.0"
authors = ["Dennis Schwerdel <schwerdel@informatik.uni-kl.de>"]

[dependencies]
time = "0.1"
fnv = "1"
yaml-rust = "0.3"
log = "0.3"
signal = "0.1"
nix = "0.5"
libc = "0.2"
sslrpc2 = { path="../shared-rust/sslrpc2" }

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
bench = []
